# bids-hcp

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker_build.sh  manifest.json  poetry.lock.old  pyproject.toml  pyproject.toml.new  requirements.txt  run  run.py  scenes  scripts  testconfig.json  utils
docs/: release_notes.md
fw_gear_hcp_diff/: DiffPreprocPipeline.py  diff_main.py  diff_utils.py  hcpdiff_qc_mosaic.py  run.py
fw_gear_hcp_func/: GenericfMRISurfaceProcessingPipeline.py  GenericfMRIVolumeProcessingPipeline.py  func_main.py  func_utils.py  hcpfunc_qc_mosaic.py  run.py
fw_gear_hcp_struct/: FreeSurfer.py  PostFreeSurfer.py  PostProcessing.py  PreFreeSurfer.py  hcpstruct_qc_mosaic.py  hcpstruct_qc_scenes.py  struct_main.py  struct_utils.py
scenes/: TEMPLATE.hcpstruct_QC.very_inflated.164k_fs_LR.scene
scripts/: SetUpHCPPipeline.sh  bash_functions.sh  hcpdiff_qc_mosaic.sh  hcpfunc_qc_mosaic.sh  hcpstruct_qc_images.sh  hcpstruct_qc_mosaic.sh  volmosaic.sh
struct_utils/: struct_utils.py
tests/: conftest.py  test_bids_file_locator.py  test_diff_pys.py  test_download_run_level.py  test_env.py  test_func_pys.py  test_gear_arg_utils.py  test_helper_funcs.py  test_make_name_safe.py  test_modality_main.py  test_modality_utils.py  test_run_level.py  test_set_params.py  test_struct_pys.py  test_tree.py  test_utils_env.py  test_validate.py  validator.basic.json
tmp/: gear_environ.json
utils/: custom_logger.py  filemapper.py  freesurfer.py  freesurfer_utils.py  gear_arg_utils.py  hcp_mapper.json  helper_funcs.py  (+6 more)
(+29 files in other folders)
