[tool.poetry]
name = "bids_hcp"
version = "0.0.1"
description = "Processing according to HCP pipeline methodology, adapted for BIDS structured data"
authors = ["support@flywheel.io"]
license = "Other"

[tool.poetry.dependencies]
python = "^3.9"
pybids = "^0.13.1"
flywheel-gear-toolkit = "^0.3.2"
flywheel-sdk = "^15.8.0"
flywheel-gear-cli = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
