[tool.poetry]
name = "bids_hcp"
version = "0.0.1"
description = "Processing according to HCP pipeline methodology, adapted for BIDS structured data"
authors = ["support@flywheel.io"]
readme = "README.md"
license = "Other"
keywords = [
    "Flywheel",
    "Gears"
]
#repository = "https://gitlab.com/flywheel-io/flywheel-apps/templates/skeleton"
classifiers = [
    "Topic :: Scientific/Engineering"
]


[tool.poetry.dependencies]
python = "^3.9"
pybids = "^0.13.1"
flywheel-gear-toolkit = "^0.3.2"
flywheel-sdk = "^15.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
mypy = "^0.790"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
